Fix broken social + search position on tablet

--- a/themes/ek2012/less/ek.less
+++ b/themes/ek2012/less/ek.less
@@ -118,6 +118,7 @@ h5 {
 		@media(max-width: 768px) {
 			position: absolute;
 			top: 20px;
+			right: 0px;
 		}
 		@media (max-width: 480px) {
 			position: static;
